--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -480,3 +480,20 @@ a p.card-extra-info:hover {
   padding: 10px;
   background: #f1f3f5;
 }
+
+.tooltip-inner {
+    min-width: 250px;
+}
+
+
+/* Feedback Event Name */
+.feedback-event-name {
+  font-size: 22px;
+  margin-top: 5px;
+}
+@media (min-width: 768px) {
+  .feedback-event-name {
+    font-size: 28px;
+    margin-top: 10px;
+  }
+}
