add honor section, allow users to edit address, display staff only fields

--- a/core/templates/core/edit_abroad.html
+++ b/core/templates/core/edit_abroad.html
@@ -14,6 +14,7 @@ Edit Study Abroad
     <li role="presentation"><a href="{% url 'edit_edu' mcuser.norm_name %}">Education</a></li>
     <li role="presentation"><a href="{% url 'edit_exp' mcuser.norm_name %}">Experience</a></li>
     <li role="presentation" class="active"><a>Study Abroad</a></li>
+    <li role="presentation"><a href="{% url 'edit_honor' mcuser.norm_name %}">Honors</a></li>
   </ul>
   <br>
   <div class="col-md-12" id="messageContainer">
