--- a/core/templates/core/edit_edu.html
+++ b/core/templates/core/edit_edu.html
@@ -14,6 +14,7 @@ Edit Education
     <li role="presentation" class="active"><a>Education</a></li>
     <li role="presentation"><a href="{% url 'edit_exp' mcuser.norm_name %}">Experience</a></li>
     <li role="presentation"><a href="{% url 'edit_abroad' mcuser.norm_name %}">Study Abroad</a></li>
+    <li role="presentation"><a href="{% url 'edit_honor' mcuser.norm_name %}">Honors</a></li>
   </ul>
   <br>
   <div class="col-md-12" id="messageContainer">
