--- a/core/templates/core/edit_exp.html
+++ b/core/templates/core/edit_exp.html
@@ -14,6 +14,7 @@ Edit Experience
     <li role="presentation"><a href="{% url 'edit_edu' mcuser.norm_name %}">Education</a></li>
     <li role="presentation" class="active"><a>Experience</a></li>
     <li role="presentation"><a href="{% url 'edit_abroad' mcuser.norm_name %}">Study Abroad</a></li>
+    <li role="presentation"><a href="{% url 'edit_honor' mcuser.norm_name %}">Honors</a></li>
   </ul>
   <br>
   <div class="col-md-12" id="messageContainer">
