--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -14,6 +14,7 @@
 <div>
   <div class="profile-name">
     <h3>{{ profile.get_full_name }}
+    {% if profile.maiden_name %}({{ profile.maiden_name }}){% endif %}
 
   </h3>
   {% if profile.user|has_role:'staff' %}
@@ -73,13 +74,24 @@
         </p>
       {% endif %}
     {% endif %}
-    {% if is_self or user|has_role:'staff' or not profile|fieldhidden:'birthday' %}
-      {% if profile.birthday %}
+    {% if is_self or user|has_role:'staff' or not profile|fieldhidden:'address' %}
+      {% if profile.mailing_address %}
         <p>
-          <span class="profile-contact-field {% if profile|fieldhidden:'birthday' %} staff-only {% endif %}">
-            Birthday:
+          <span class="profile-contact-field {% if profile|fieldhidden:'address' %} staff-only {% endif %}">
+            Address:
           </span>
-          {{ profile.birthday|date:"F j" }}
+          {{ profile.mailing_address }}, {{ profile.mailing_city }}, {{ profile.mailing_state }} {{ profile.mailing_zip }}
+          {% if profile.mailing_country %}, {{ profile.mailing_country }} {% endif %}
+        </p>
+      {% endif %}
+    {% endif %}
+    {% if user|has_role:'staff' %}
+      {% if profile.mailing_address_type %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Address type:
+          </span>
+          {{ profile.mailing_address_type }}
         </p>
       {% endif %}
     {% endif %}
@@ -108,6 +120,82 @@
           <a href="{{ profile.linkedin|absoluteurl }}">LinkedIn</a>
         {% endif %}
       </p>
+    {% endif %}
+    {% if is_self or user|has_role:'staff' or not profile|fieldhidden:'birthday' %}
+      {% if profile.birthday %}
+        <p>
+          <span class="profile-contact-field {% if profile|fieldhidden:'birthday' %} staff-only {% endif %}">
+            Birthday:
+          </span>
+          {{ profile.birthday|date:"F j" }}
+        </p>
+      {% endif %}
+    {% endif %}
+    {% if user|has_role:'staff' %}
+      {% if profile.marriage %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Marriage:
+          </span>
+          {{ profile.marriage }}
+        </p>
+      {% endif %}
+      {% if profile.right_after %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Right after McD:
+          </span>
+          {{ profile.right_after }}
+        </p>
+      {% endif %}
+      {% if profile.ultimate %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Ultimately grad/prof?:
+          </span>
+          {{ profile.ultimate }}
+        </p>
+      {% endif %}
+      {% if profile.in_dfw %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Currently in DFW Area?:
+          </span>
+          {{ profile.in_dfw }}
+        </p>
+      {% endif %}
+      {% if profile.current_city %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Current city/area:
+          </span>
+          {{ profile.current_city }}
+        </p>
+      {% endif %}
+      {% if profile.significant_other %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Significant other:
+          </span>
+          {{ profile.significant_other }}
+        </p>
+      {% endif %}
+      {% if profile.children %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Child(ren):
+          </span>
+          {{ profile.children }}
+        </p>
+      {% endif %}
+      {% if profile.personal_news %}
+        <p>
+          <span class="profile-contact-field staff-only">
+            Personal news:
+          </span>
+          {{ profile.personal_news }}
+        </p>
+      {% endif %}
     {% endif %}
   </div>
 </div>
@@ -208,6 +296,27 @@
         <div class="profile-description">
           {{ study_abroad.description|pwrap|safe }}
         </div>
+      {% endif %}
+    </div>
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if profile.honors.all %}
+  <h4 class="margin-bot-md">Honors
+    {% if is_self or user|can:'edit_all_info' %}
+      <a href="{% url 'edit_honor' profile.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
+    {% endif %}
+  <!--<button type="button" class="btn btn-sm profile-show-btn" data-toggle="collapse" data-target="#study-abroad">Show</button>-->
+  </h4>
+  <div id="honor" class="indented">
+    {% for honor in profile.honors.all %}
+    <div class="experience">
+      <span class="school-name">
+        {{ honor.title }}
+      </span>
+      {% if honor.received_time %}
+        &mdash; {{ honor.received_time|date:"F Y" }}
       {% endif %}
     </div>
     {% endfor %}
