--- a/core/templates/core/scholars.html
+++ b/core/templates/core/scholars.html
@@ -32,7 +32,7 @@ Directory
       </div>
       <!-- Scholar quick info -->
       <div class="text-right">
-        <a class="no-dec" href ="/{{ scholar.first_name|removespaces }}{{ scholar.last_name|removespaces }}">
+        <a class="no-dec" href ="/{{ scholar.get_full_name_for_link }}">
           <h4>{{ scholar.get_full_name }}</h4>
         </a>
         <span style="font-size:16px;">
