--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -53,8 +53,7 @@
                   <li><a href="{% url 'own_profile' %}">My Profile</a></li>
                   <li><a href="{% url 'issues:index' %}">Report Issue</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="{% url 'password_change' %}">Change Password</a></li>
-                  <li><a href="{% url 'edit_account' %}">Change Account</a></li>
+                  <li><a href="{% url 'edit_account' %}">Edit Account</a></li>
                   <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
