--- a/core/templates/core/edit_account.html
+++ b/core/templates/core/edit_account.html
@@ -53,6 +53,35 @@
       {% endif %}
     </div>
 
+    <div class="form-group">
+      {{ form.new_password.errors }}
+      <div class="form-group">
+        <label for="new_password" class="col-sm-4 control-label">
+          New password
+        </label>
+        <div class="col-sm-8">
+          {{ form.new_password|add_class:"form-control" }}
+        </div>
+      </div>
+      {% if form.new_password.help_text %}
+      <p class="help">{{ form.new_password.help_text|safe }}</p>
+      {% endif %}
+    </div>
+
+    <div class="form-group">
+      {{ form.new_password_confirm.errors }}
+      <div class="form-group">
+        <label for="new_password_confirm" class="col-sm-4 control-label">
+          Confirm new password
+        </label>
+        <div class="col-sm-8">
+          {{ form.new_password_confirm|add_class:"form-control" }}
+        </div>
+      </div>
+      {% if form.new_password_confirm.help_text %}
+      <p class="help">{{ form.new_password_confirm.help_text|safe }}</p>
+      {% endif %}
+    </div>
 
     <input type="submit" value="Save" class="btn btn-default" />
   </form>
