--- a/core/templates/core/edit_account.html
+++ b/core/templates/core/edit_account.html
@@ -19,6 +19,9 @@
       {% endfor %}
     {% endif %}
   </div>
+  {% if name %}
+    <h4>{{ name }}</h4>
+  {% endif %}
   {% if form.errors %}
     <p class="errornote">
     {% if form.errors.items|length == 1 %}Please correct the error below.{% else %}Please correct the errors below.{% endif %}
