--- a/core/templates/core/married.html
+++ b/core/templates/core/married.html
@@ -10,7 +10,7 @@ McDermott Marriages
 <div>
   <h4>Number of McDermott marriages: {{ marriage_count }}</h4>
   {% for scholar in scholars %}
-    <h5><a href="/{{ scholar.get_full_name_for_link }}">{{ scholar.get_full_name_with_maiden }}</a></h5>
+    <h5><a href="/{{ scholar.get_link_name }}">{{ scholar.get_full_name_with_maiden }}</a></h5>
   {% endfor %}
 </div>
 {% endblock %}
