--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -13,7 +13,12 @@
 <!-- Name and contact info-->
 <div>
   <div class="profile-name">
-    <h3>{{ profile.get_full_name_with_maiden }}</h3>
+    <h3>
+      {{ profile.get_full_name_with_maiden }}
+      {% if user|can:'edit_all_info' %}
+        <a href="{% url 'edit_other_account' profile.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Account Settings</a>
+      {% endif %}
+    </h3>
   {% if profile.user|has_role:'staff' %}
     {% if profile.staff_title %}
       <h5 style="margin-top:-8px; margin-bottom: 25px">{{ profile.staff_title }}</h5>
