update link on index page

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -38,7 +38,7 @@ McDermott Network
       <input style="padding-left: 10px" class="form-control search-bar" type="text" name="q"
              id="searchbox-main" placeholder="Search..."/>
       <br>
-      <a href="{% url 'feedback:index' 'fw2016' %}">Finalists' Weekend Feedback System</a>
+      <a href="{% url 'feedback:index' 'sp16' %}">Sneak Peek 2016</a>
       {% if user|has_role:'staff' %}
       <br>
       <a href="{% url 'feedback:events' %}">Manage Feedback Events</a>
