--- a/feedback/templates/feedback/edit_applicant.html
+++ b/feedback/templates/feedback/edit_applicant.html
@@ -31,7 +31,9 @@ Feedback - Edit {{ applicant.get_full_name }}
         <label for="id_{{ form.last_name.name }}" class="form-label">
           Last name
         </label>
-        <span class="text-right pull-right">Attended: {{ form.attended }}</span>
+        {% if user|has_role:'staff' %}
+          <span class="text-right pull-right">Attended: {{ form.attended }}</span>
+        {% endif %}
         {{ form.last_name|add_class:"form-control" }}
         <span class="error">{{ form.last_name.errors }}</span>
       </div>
