--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -9,7 +9,7 @@
 Feedback - {{ applicant.get_full_name }}
 {% endblock %}
 
-{% if user|has_role:'staff' or user|has_role:'selection' %}
+{% if user|can_read_data_for:event_name %}
   {% block additional_include %}
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.10/css/dataTables.bootstrap.min.css">
   <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
@@ -66,7 +66,7 @@ Feedback - {{ applicant.get_full_name }}
               <span class="error">{{ form.notes.errors }}</span>
             </div>
           </div>
-        {% if user|has_role:'staff' %}
+        {% if user|is_staff_for:event_name %}
           <table class="table table-striped table-hover margin-top-lg">
             <tbody>
               <tr>
@@ -141,7 +141,7 @@ Feedback - {{ applicant.get_full_name }}
       </form>
     </div>
   </div>
-  {% if user|has_role:'staff' or user|has_role:'selection' %}
+  {% if user|can_read_data_for:event_name %}
     <div class="col-md-12">
       <h4>Feedback</h4>
         <div class="table-responsive">
@@ -173,7 +173,7 @@ Feedback - {{ applicant.get_full_name }}
     </div>
   {% endif %}
 </div>
-{% if user|has_role:'staff' or user|has_role:'selection' %}
+{% if user|can_read_data_for:event_name %}
   <script>
   $(document).ready(function(){
       $('#feedbackTable').DataTable({
