--- a/feedback/templates/feedback/applicant_table_ratings.html
+++ b/feedback/templates/feedback/applicant_table_ratings.html
@@ -32,7 +32,7 @@ Feedback - Applicant Table
           <th>Title</th>
           <th>First</th>
           <th>Last</th>
-          {% if user|has_role:'staff' or user|has_role:'selection' %}
+          {% if user|can_read_data_for:event_name %}
             <th>R-A</th>
             <th>I-A</th>
             <th>F-A</th>
@@ -60,7 +60,7 @@ Feedback - Applicant Table
             </td>
             <td><a href="{% url 'feedback:applicant_profile' event_name applicant.norm_name %}">{{ applicant.first_name }}</a></td>
             <td><a href="{% url 'feedback:applicant_profile' event_name applicant.norm_name %}">{{ applicant.last_name }}</a></td>
-            {% if user|has_role:'staff' or user|has_role:'selection' %}
+            {% if user|can_read_data_for:event_name %}
               <td>{{ applicant|all_feedback|alumni_filter|rating_average }}</td>
               <td>{{ applicant|all_feedback|alumni_filter|interest_average }}</td>
               <td>{{ applicant|favorite_filter|alumni_filter|length }}</td>
@@ -92,7 +92,7 @@ $(document).ready(function(){
       "scrollCollapse": true,
       "paging": false,
       "scrollX": true,
-      {% if user|has_role:'staff' or user|has_role:'selection' %}
+      {% if user|can_read_data_for:event_name %}
       "columnDefs": [
         { "type": "num", targets: [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]  }
       ]
