--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -26,6 +26,11 @@ Feedback - {{ applicant.get_full_name }}
       <a href="{% url 'feedback:edit_applicant' event_name applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
     </h4>
   </div>
+  <form method="post" action="" id="feedback_form">
+  {% csrf_token %}
+  {% if form.errors %}
+    There were errors!
+  {% endif %}
   <div class="col-md-6">
     <div class="row">
       <div class="text-center">
@@ -97,50 +102,45 @@ Feedback - {{ applicant.get_full_name }}
   </div>
   <div class="col-md-6">
     <div class="row">
-      <form method="post" action="">
-        {% csrf_token %}
-        {% if form.errors %}
-          There were errors!
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="id_rating" class="form-label">
+            Is this person a Scholar?
+          </label>
+          {{ form.rating }}
+          <span class="error">{{ form.rating.errors }}</span>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="id_interest" class="form-label">
+            Does this person want to be a Scholar?
+          </label>
+          {{ form.interest|add_class:"form-control disabled" }}
+          <span class="error">{{ form.interest.errors }}</span>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="id_comments" class="form-label">
+            Additional comments (especially about personality, soft skills):
+          </label>
+          {{ form.comments|add_class:"form-control" }}
+          <span class="error">{{ form.comments.errors }}</span>
+        </div>
+      </div>
+      <br>
+      <div class="col-md-12 text-center">
+        <a href="{% url 'feedback:index' event_name %}" class="btn btn-default">BACK</a>
+        {% if state.current != 3 %}
+          &nbsp;&nbsp;
+          <input class="btn btn-default" type="submit" value="SAVE" />
         {% endif %}
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="id_rating" class="form-label">
-              Is this person a Scholar?
-            </label>
-            {{ form.rating }}
-            <span class="error">{{ form.rating.errors }}</span>
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="id_interest" class="form-label">
-              Does this person want to be a Scholar?
-            </label>
-            {{ form.interest|add_class:"form-control disabled" }}
-            <span class="error">{{ form.interest.errors }}</span>
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="id_comments" class="form-label">
-              Additional comments (especially about personality, soft skills):
-            </label>
-            {{ form.comments|add_class:"form-control" }}
-            <span class="error">{{ form.comments.errors }}</span>
-          </div>
-        </div>
-        <br>
-        <div class="col-md-12 text-center">
-          <a href="{% url 'feedback:index' event_name %}" class="btn btn-default">BACK</a>
-          {% if state.current != 3 %}
-            &nbsp;&nbsp;
-            <input class="btn btn-default" type="submit" value="SAVE" />
-          {% endif %}
-        </div>
-        <br>
-      </form>
+      </div>
+      <br>
     </div>
   </div>
+  </form>
   {% if user|can_read_data_for:event_name %}
     <div class="col-md-12">
       <h4>Feedback</h4>
@@ -173,9 +173,49 @@ Feedback - {{ applicant.get_full_name }}
     </div>
   {% endif %}
 </div>
-{% if user|can_read_data_for:event_name %}
-  <script>
-  $(document).ready(function(){
+<script>
+  //For getting CSRF token
+  function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie != '') {
+      var cookies = document.cookie.split(';');
+      for (var i = 0; i < cookies.length; i++) {
+        var cookie = jQuery.trim(cookies[i]);
+        if (cookie.substring(0, name.length + 1) == (name + '=')) {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+          break;
+        }
+      }
+    }
+    return cookieValue;
+  }
+  $('#feedback_form').on('submit', function(event){
+    event.preventDefault();
+    $.ajax({
+      url : window.location.href,
+      type : "POST",
+      data : { 
+        csrfmiddlewaretoken : getCookie('csrftoken'),
+        rating: $('input[name=rating]:checked').val(),
+        interest: $('input[name=interest]:checked').val(),
+        comments : $('#id_comments').val(),
+        notes: $('#id_notes').val(),
+      },
+
+      // handle a successful response
+      success : function(json) {
+        console.log(json);
+      },
+
+      // handle a non-successful response
+      error : function(xhr,errmsg,err) {
+        console.log(xhr.status + ": " + xhr.responseText); 
+      }
+    });
+  });    
+
+  {% if user|can_read_data_for:event_name %}
+    $(document).ready(function(){
       $('#feedbackTable').DataTable({
         "order": [[ 2, "desc" ]],
         "scrollY": "400px",
@@ -187,7 +227,7 @@ Feedback - {{ applicant.get_full_name }}
           { "orderable": false, "targets": 4 }
         ]
       });
-  });
-  </script>
-{% endif %}
+    });
+  {% endif %}
+</script>
 {% endblock %}
