--- a/feedback/templates/feedback/edit_applicant.html
+++ b/feedback/templates/feedback/edit_applicant.html
@@ -74,6 +74,24 @@ Feedback - Edit {{ applicant.get_full_name }}
         <span class="error">{{ form.hometown_state.errors }}</span>
       </div>
     </div>
+    <div class="col-md-6 col-sm-6">
+      <div class="form-group margin-sm">
+        <label for="id_{{ form.major.name }}" class="form-label">
+          Major
+        </label>
+        {{ form.major|add_class:"form-control" }}
+        <span class="error">{{ form.major.errors }}</span>
+      </div>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      <div class="form-group margin-sm">
+        <label for="id_{{ form.career.name }}" class="form-label">
+          Career
+        </label>
+        {{ form.career|add_class:"form-control" }}
+        <span class="error">{{ form.career.errors }}</span>
+      </div>
+    </div>   
     <!--TODO: Replace this with something else later -->
     <div class="col-md-4 col-md-offset-4 col-sm-12 text-center margin-height-md">
       <label>Registration Pic</label>
